--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,51 +1,13 @@
 <!--miniprogram/pages/index/index.wxml-->
-<view>多肉识别
+<view class="index_top">
+  <image src="cloud://mycloud2.6d79-mycloud2-1302182014/plant.png"></image>
+  <!-- <image src="../../../../../images/plant.png"></image> -->
+  <view>多肉识别</view>
 </view>
-<van-tabbar active="{{ active }}" inactive-color="#515151" active-color="#07c160" bind:change="onChange">
-  <van-tabbar-item name="distinguish">
-    <image
-      slot="icon"
-      src="../../images/distinguish1.png"
-      mode="aspectFit"
-      style="width: 30px; height: 18px;"
-    />
-    <image
-      slot="icon-active"
-      src="../../images/distinguish2.png"
-      mode="aspectFit"
-      style="width: 30px; height: 18px;"
-    />
-    识别
-  </van-tabbar-item>
-  <van-tabbar-item name="illustrate">
-    <image
-        slot="icon"
-        src="../../images/illustrate1.png"
-        mode="aspectFit"
-        style="width: 30px; height: 18px;"
-      />
-      <image
-        slot="icon-active"
-        src="../../images/illustrate2.png"
-        mode="aspectFit"
-        style="width: 30px; height: 18px;"
-      />
-      图鉴
-    </van-tabbar-item>
-  <van-tabbar-item name="share">
-    <image
-        slot="icon"
-        src="../../images/share1.png"
-        mode="aspectFit"
-        style="width: 30px; height: 18px;"
-      />
-      <image
-        slot="icon-active"
-        src="../../images/share2.png"
-        mode="aspectFit"
-        style="width: 30px; height: 18px;"
-      />
-      分享
-      </van-tabbar-item>
-  <van-tabbar-item icon="friends-o" name="our">我们</van-tabbar-item>
-</van-tabbar>
+<view>
+  <button class="index_button">
+  <image src="../../../../../images/photo.png" class="button_img"></image>
+  <view class="button_msg">拍照识别</view>
+</button>
+</view>
+<view class="from_album">从相册上传 ></view>
