--- a/miniprogram/pages/share/share.wxss
+++ b/miniprogram/pages/share/share.wxss
@@ -1,1 +1,94 @@
 /* miniprogram/pages/share/share.wxss */
+.share_top {
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0rpx;
+  z-index: 1;
+  background-color: #eee;
+}
+.back {
+  margin: 0 0 0 36rpx;
+}
+.share_right {
+  width: 50rpx;
+  height: 60rpx;
+  border-radius: 50%;
+  margin: 20rpx 36rpx 0 0;
+  color: #fff;
+  /* background-color: #25d7a5; */
+  border: none;
+}
+
+.add {
+  transform: translate(-20rpx, -14rpx)
+}
+.share_title {
+  font-size: 40rpx;
+  color: green;
+  padding: 20rpx 0;
+}
+
+.main {
+  width: 95%;
+  margin: auto;
+  font-size: 30rpx;
+}
+.one {
+  margin-top: 30rpx;
+  padding-bottom: 10rpx;
+  border-bottom: 1px solid #eee;
+  display: flex;
+}
+.right {
+  margin: 20rpx 0 10rpx 20rpx;
+}
+.top_nick {
+  display: flex;
+  justify-content: space-between;
+}
+.nickname {
+  color: #545b78;
+}
+.shareimg_box {
+  display: grid;
+  grid-template-columns: 190rpx 190rpx 190rpx 1fr;
+  margin: 20rpx 0;
+}
+.bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.bottom_right {
+  display: flex;
+  color: grey;
+}
+.time {
+  font-size: 30rpx;
+  color: grey;
+}
+.zan {
+  margin: -16rpx 0 0 10rpx;
+}
+.popup_box {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  height: 97%;
+  margin-top: 20rpx;
+}
+.msg_box {
+  width: 90%;
+  height: 50%;
+  border: 1px solid #eee
+}
+.mid_box {
+  width: 90%;
+  margin: 20rpx 0;
+}
+.btn {
+  width: 90%;
+  background-color: #25d7a5;
+  color: #fff;
+}
